Fix margin for white-box on mobile view.
– SAAS-337

--- a/assets/sass/blocks/white-box.scss
+++ b/assets/sass/blocks/white-box.scss
@@ -6,6 +6,15 @@
     background: #FFFFFF;
     border: 0px solid #D8D8D8;
     box-shadow: 0px 2px 2px 0px rgba(223,223,223,0.50);
+    @include bp(xs) {
+        @include property(margin, 20 10);
+    } // xs
+    @include bp(sm) {
+        @include property(margin, 20 10);
+    } // sm
+    @include bp(md) {
+        @include property(margin, 20 30);
+    } // md
     &.clear {
         padding: 0;
     } // &.clear
